satyam.suthar@elevancehalth.com updated search endpoint and refactor
